[gd_scene load_steps=6 format=3 uid="uid://dy4gsxxgg6a7m"]

[ext_resource type="Script" path="res://ui/dialogue/dialogue.gd" id="1_pravm"]
[ext_resource type="Theme" uid="uid://bx3tljos5sfq5" path="res://ui/dialogue/dialogue_theme.tres" id="1_qxf2c"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="2_44o8d"]
[ext_resource type="PackedScene" uid="uid://da4raa0gjwn07" path="res://ui/dialogue/dialogue_button.tscn" id="3_kbmq4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eln8y"]
bg_color = Color(0, 0, 0, 1)

[node name="Dialogue" type="Panel" node_paths=PackedStringArray("dialogue_container", "button_container", "dialogue_text")]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -300.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme = ExtResource("1_qxf2c")
theme_override_styles/panel = SubResource("StyleBoxFlat_eln8y")
script = ExtResource("1_pravm")
dialogue_button_res = ExtResource("3_kbmq4")
dialogue_container = NodePath("DialogueContainer")
button_container = NodePath("DialogueContainer/GridContainer")
dialogue_text = NodePath("DialogueContainer/DialogueText")

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("2_44o8d")

[node name="DialogueContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.1
offset_left = -66.0
offset_right = 67.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogueText" type="RichTextLabel" parent="DialogueContainer"]
layout_mode = 2
size_flags_vertical = 2
bbcode_enabled = true
fit_content = true

[node name="GridContainer" type="GridContainer" parent="DialogueContainer"]
layout_mode = 2
size_flags_vertical = 10
columns = 2

[connection signal="custom_signal_received" from="EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
